# elephant-rumble-inference

./: LICENSE  README.md  pyproject.toml
elephant_rumble_inference/: __init__.py  audio_file_processor.py  audio_file_visualizer.py  aves_torchaudio_wrapper.py  elephant_rumble_classifier.py  elephant_rumble_inference.py  main.py  raven_file_helper.py  test_data_downloader.py  triple_buffered_iterator.py
notebooks/: 5-compare-ssqueezepy-s-wavelets-vs-librosa-s-stft.ipynb  7-compare_stft_implementations.ipynb  evaluate_model.ipynb  training_notebook.ipynb
