[tool.poetry]
name = "elephant-rumble-inference"
version = "0.1.5"
description = ""
authors = ["Ron M <ramayer+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
einops = ">=0.8.0"
# torchaudio = ">=2.3.0" # just makes google colab slow

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elephant-rumble-inference = "elephant_rumble_inference.main:main"

