[tool.poetry]
name = "elephant-rumble-inference"
version = "0.2.0"
description = ""
authors = ["Ron M <ramayer+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
einops = ">=0.8.0"
torchaudio = ">=2.3.0" # Google Colab's better off without this dependency just makes google colab slow
librosa = ">=0.10.0" # Google colab already has a better version; this automatically gest scipy and numpy
matplotlib = ">=3.9.0"
duckdb = ">=0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elephant-rumble-inference = "elephant_rumble_inference.main:main"

